--- a/entert_projet_01/pubspec.yaml
+++ b/entert_projet_01/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   percent_indicator: ^4.2.5
   font_awesome_flutter: ^10.9.1
   fl_chart: ^1.0.0
+  firebase_core: ^4.0.0
 
 dev_dependencies:
   flutter_test:
