--- a/entert_projet_01/.gitignore
+++ b/entert_projet_01/.gitignore
@@ -32,7 +32,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-/lib/pages/providersTest
+/lib/firebase_options.dart
 # Symbolication related
 app.*.symbols
 
