--- a/entert_projet_01/pubspec.yaml
+++ b/entert_projet_01/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   font_awesome_flutter: ^10.9.1
   fl_chart: ^1.0.0
   firebase_core: ^4.0.0
+  firebase_auth: ^6.0.1
 
 dev_dependencies:
   flutter_test:
