--- a/entert_projet_01/pubspec.yaml
+++ b/entert_projet_01/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   fl_chart: ^1.0.0
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.1
+  cloud_firestore: ^6.0.0
 
 dev_dependencies:
   flutter_test:
