--- a/entert_projet_01/.gitignore
+++ b/entert_projet_01/.gitignore
@@ -33,6 +33,7 @@ migrate_working_dir/
 .pub/
 /build/
 /lib/firebase_options.dart
+/lib/pages/messagerie
 # Symbolication related
 app.*.symbols
 
@@ -43,3 +44,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
