--- a/entert_projet_01/pubspec.yaml
+++ b/entert_projet_01/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   firebase_auth: ^6.0.1
   cloud_firestore: ^6.0.0
   provider: ^6.1.5+1
+  firebase_database: ^12.0.0
+  shared_preferences: ^2.5.3
+
 
 dev_dependencies:
   flutter_test:
