--- a/entert_projet_01/pubspec.yaml
+++ b/entert_projet_01/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   provider: ^6.1.5+1
   firebase_database: ^12.0.0
   shared_preferences: ^2.5.3
+  http: ^1.5.0
 
 
 dev_dependencies:
